<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trivia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.triviaapp.Trivia">

    <TextView
        android:text="@string/questNo"
        android:id="@+id/questionNo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="40dp"
        android:layout_height="20dp" />

    <TextView
        android:text="@string/timeInSecs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/timeInSecs" />

    <ImageView
        app:srcCompat="@android:color/transparent"
        android:layout_below="@+id/timeLeft"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/quizPicture"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <TextView
        android:text="@string/timeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeLeft"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/timeInSecs"
        android:layout_toStartOf="@+id/timeInSecs"
        android:layout_marginRight="19dp"
        android:layout_marginEnd="19dp" />

    <RadioGroup
        android:layout_width="300dp"
        android:id="@+id/ansRadioGroup"
        android:layout_toRightOf="@+id/questionNo"
        android:layout_toEndOf="@+id/questionNo"
        android:layout_height="200dp"
        android:layout_above="@+id/previous"
        android:layout_below="@+id/questionText" />

    <TextView
        android:text="@string/quesText"
        android:layout_height="wrap_content"
        android:id="@+id/questionText"
        android:layout_width="600dp"
        android:layout_below="@+id/quizPicture"
        android:layout_toLeftOf="@+id/timeInSecs"
        android:layout_toStartOf="@+id/timeInSecs"
        android:layout_marginTop="29dp" />

    <Button
        android:text="@string/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/previous"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/ansRadioGroup"
        android:layout_alignStart="@+id/ansRadioGroup" />

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next"
        android:layout_below="@+id/ansRadioGroup"
        android:layout_toRightOf="@+id/quizPicture"
        android:layout_toEndOf="@+id/quizPicture" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignRight="@+id/quizPicture"
        android:layout_alignEnd="@+id/quizPicture"
        android:layout_above="@+id/questionText"
        android:layout_alignLeft="@+id/quizPicture"
        android:layout_alignStart="@+id/quizPicture"
        android:layout_alignTop="@+id/quizPicture" />
</RelativeLayout>
